--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <a href="#contact">Contact</a>
     </nav>
     <div class="content-wrap">
-      <img class="profile-img col-narrow" src="./sirangusivaramakrishna.github.io/Sivarama-Krishna.JPEG" alt="Sivarama Krishna Sirangu">
+      <img class="profile-img col-narrow" src="Sivarama-Krishna.jpg" alt="Sivarama Krishna Sirangu">
       <div class="col-wide">
         <h1>Sivarama Krishna Sirangu</h1>
 <p>I am an inquisitive computer and information systems Graduate student with a passion for developing scalable web applications and also have an experience in working across the full-stack of software development. Beisdes I am also skilled in leadership, with a strong foundation in math, programming logic, and coss-platform coding.seeking to leverage solid development skills with a focus on collaboration, communication and passion.</p>
