--- a/hci/HW4.html
+++ b/hci/HW4.html
@@ -1,7 +1,60 @@
-<p><b>CS 732/832 –Human Computer Interaction, HW4</b></p>
+<!-- <p><b>CS 732/832 –Human Computer Interaction, HW4</b></p>
 <h3>Group memebers:</h3>
 <p><b>sivarama krishna sirangu UIN:01217611</b></p>
 <p><b>vinutna dasari UIN:01217611</b></p>
 
 <a href="sirangusivaramakrishna.github.io/hci/loginpage.html"></a>
-<p><a href="loginpage.html">Groceries Shopping</a></p>
+<p><a href="loginpage.html">Groceries Shopping</a></p> -->
+<!DOCTYPE html>
+<html>
+<head>
+	<title>LogIn Page</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+</head>
+<body>
+  <style>
+    body {
+      background-image: url('mainimage.jpg');
+    }
+    </style>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" ></a>Home</a>
+  
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+ 
+    <form class="form-inline my-2 my-lg-0">
+      <input style="text-align: Top left;" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button style="text-align: Top left;" class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+
+<div class="container">
+	<div class="row">
+		<div style="width: 40%; margin: 25px auto;">
+		<h3 style="text-align: top left " style="color:red;"  >Login Page</h3>
+		<form method="POST" action="">
+			<div class="form-group">
+				<label> Email:</label><input type="text" name="Email" class="form-control" autofocus placeholder="Email">
+			</div>
+			<div class="form-group">
+				<label>Password:</label><input type="Password" name="Password" class="form-control" autofocus placeholder="Password">
+			</div>
+			<div class="form-group">
+				<button><a href="groceries.html">submit</a></button>
+        
+			</div>
+		</form>
+		<p>New Here?<a href="signup.html">Sign Up</a> </p>
+		<!-- <p>Forgotten Password?<a href="">Recover here</a> </p> -->
+	</div>
+</div>
+</div>
+
+
+</body>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+</html>
