--- a/hci/HW4.html
+++ b/hci/HW4.html
@@ -7,12 +7,16 @@
 </head>
 <body>
     <p><b>CS 732/832 –Human Computer Interaction, HW4</b></p>
-<h3>Group memebers:</h3>
+<h1>Group memebers:</h1>
 <p><b>sivarama krishna sirangu UIN:01217611</b></p>
-<p><b>vinutna dasari UIN:01217611</b></p>
+<p><b>vinutna dasari UIN:01243820</b></p>
 
 <a href="sirangusivaramakrishna.github.io/hci/loginpage.html"></a>
-<p><a href="loginpage.html">Groceries Shopping</a></p>
+<h2>Link to prototype:</h2>
+<p><a href="loginpage.html">Groceries Shopping:</a></p>
+<h3>Instructions to Prototype:</h3>
+<p><a href="SSira003_HW3.pdf">Refer this Link:</a></p>
+
 </body>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
